<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">weehaufyp</string>

    <!-- Main menu strings -->
    <string name="action_settings">Settings</string>
    <string name="menu_welcome_text">Welcome to this Android app</string>
    <string name="menu_start_button">Start</string>
    <string name="menu_help_button">Help</string>
    <string name="menu_credits_button">Credits</string>
    <string name="menu_feedback_button">Feedback</string>
    <string name="menu_settings_button">Settings</string>

    <!-- Lesson selection page -->
    <string name="lesson_selection_text">Select a lesson</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_lesson">LessonActivity</string>

    <!-- Song selection page -->
    <string name="song_selection_text">Select a song</string>
    <!-- 1.1 song list -->
    <string-array name="main1_sub1_songs">
        <item>Stay With Me</item>
        <item>Haunted</item>
        <item>Mirror</item>
        <item>Shake It Off</item>
        <item>Summertime Sadness</item>
        <item>Locked Out Of Heaven</item>
        <item>Royals</item>
        <item>Maps</item>
        <item>Happy</item>
        <item>Chandelier</item>
    </string-array>
    <string-array name="main1_sub1_artists">
        <item>Artist: Sam Smith</item>
        <item>Artist: Beyonce</item>
        <item>Artist: Justin Timberlake</item>
        <item>Artist: Taylor Swift</item>
        <item>Artist: Lana Del Rey</item>
        <item>Artist: Bruno Mars</item>
        <item>Artist: Lorde</item>
        <item>Artist: Maroon 5</item>
        <item>Artist: Pharrell Williams</item>
        <item>Artist: Sia</item>
    </string-array>
    <string-array name="main1_sub1_albums">
        <item>Album: In The Lonely Hour</item>
        <item>Album: Beyonce</item>
        <item>Album: 20/20 Experience Part 2</item>
        <item>Album: 1989</item>
        <item>Album: Born To Die</item>
        <item>Album: Unorthodox Jukebox</item>
        <item>Album: Pure Heroine</item>
        <item>Album: V</item>
        <item>Album: G I R L</item>
        <item>Album: 1000 Forms of Fear</item>
    </string-array>

    <!-- Song playback -->
    <string name="song_playback_shuffle">Shuffle</string>
    <string name="song_playback_end">End</string>

    <!-- Credits page strings -->
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="credits_text_1">About the app</string>
    <string name="credits_text_2">People involved</string>
    <string name="credits_text_3">Property of someone</string>
    <string name="title_activity_song_selection">SongSelectionActivity</string>
    <string name="title_activity_song_playback">SongPlaybackActivity</string>
    <string name="title_activity_song_list">SongListActivity</string>
    <string name="title_activity_try_song_list">TrySongListActivity</string>
    <string name="title_activity_audio_player_acitivity">AudioPlayerAcitivity</string>
    <string name="title_activity_audio_player">AudioPlayerActivity</string>

    <!-- Audio player -->
    <string name="now_playing_label">Now Playing:</string>
    <string name="inital_Time">0:00</string>
    <string name="lyrics_tab_button">Lyrics</string>
    <string name="lesson_tab_button">Lesson</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_fragment">TestFragment</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lyrics_fragment">LyricsFragment</string>
    <string name="title_activity_lesson_content_fragment">LessonContentFragment</string>
    <string name="title_activity_exercise">ExerciseActivity</string>

    <!-- Exercise activity -->
    <string name="lesson_name_label">Lesson Name</string>
    <string name="question_text_view">Question</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="choice_4">Choice 4</string>
    <string name="check_answer">Check my answer</string>
    <string name="answer_response">Here shows correct or wrong</string>
    <string name="check_result">Check my result</string>
    <string name="question_no">00</string>

</resources>
