<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.toshiba.weehaufyp.ExerciseActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lesson_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_name_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:onClick="lessonNameTips"
        android:clickable="true"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="progressBarTips"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/current_question"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/question_no"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="/"/>

        <TextView
            android:id="@+id/total_questions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/question_no"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <RadioGroup
            android:id="@+id/answer_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_1" />

            <RadioButton
                android:id="@+id/choice_2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_2" />

            <RadioButton
                android:id="@+id/choice_3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_3" />

            <RadioButton
                android:id="@+id/choice_4_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_4" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/check_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_answer"
        android:onClick="checkAnswer"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/answer_response_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/check_result_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_result"
                android:layout_weight="3"
                android:onClick="checkResult"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"/>

            <ImageButton
                android:id="@+id/next_question_button"
                android:src="@drawable/black_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_weight="2"
                android:onClick="nextQuestion"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
