<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.toshiba.weehaufyp.CreditsActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credits_text_1"
            android:id="@+id/credits_text_1"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credits_text_2"
            android:id="@+id/credits_text_2"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credits_text_3"
            android:id="@+id/credits_text_3"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:padding="@dimen/activity_vertical_margin"/>
    </LinearLayout>

</LinearLayout>
