<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.toshiba.weehaufyp.AudioPlayerActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/now_playing_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:singleLine="true"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/current_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="3">

        <!-- switch fragment views between 2 buttons-->
        <Button
            android:id="@+id/lyrics_tab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lyrics_tab_button"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/lesson_tab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lesson_tab_button"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"/>

        <ImageButton
            android:id="@+id/exercise_button"
            android:src="@drawable/exercise_button_self_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exercise"
            android:layout_weight="1"
            android:background="@null"
            android:paddingLeft="10dp"/>

    </LinearLayout>

    <!-- Fragment holder -->
    <LinearLayout
        android:id="@+id/fragment_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/inital_Time"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="/"/>

                <TextView
                    android:id="@+id/time_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/inital_Time"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="6">
            <ImageButton
                android:id="@+id/repeat_button"
                android:src="@drawable/black_repeat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="repeat"
                android:layout_weight="1"
                android:background="@null"/>
            <ImageButton
                android:id="@+id/previous_button"
                android:src="@drawable/black_previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="previous"
                android:layout_weight="1"
                android:background="@null"/>
            <ImageButton
                android:id="@+id/rewind_button"
                android:src="@drawable/black_rewind_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="rewind"
                android:layout_weight="1"
                android:background="@null"/>
            <ImageButton
                android:id="@+id/play_button"
                android:src="@drawable/black_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="play"
                android:layout_weight="1"
                android:background="@null"/>
            <ImageButton
                android:id="@+id/fast_forward_button"
                android:src="@drawable/black_forward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="forward"
                android:layout_weight="1"
                android:background="@null"/>
            <ImageButton
                android:id="@+id/next_button"
                android:src="@drawable/black_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="next"
                android:layout_weight="1"
                android:background="@null"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>